resolve contrast issues to meet up with contrast requirements

--- a/client/scss/components/_skiplink.scss
+++ b/client/scss/components/_skiplink.scss
@@ -10,8 +10,9 @@
   }
 
   &.button {
-    background: theme('colors.positive.100');
-    color: theme('colors.black.DEFAULT');
+    background: theme('colors.secondary.DEFAULT');
     border: theme('colors.positive.100');
+   
+    
   }
 }
